# GeantV

./: CMakeLists.txt  GeantVConfig.cmake.in  VecMagFieldRoutine
Nudy/: CMakeLists.txt  LinkDef.h  NudyLinkDef.h
Nudy/inc/: ElementProp.h  LinkDef.h  Material.h  NudyInterface.h  NudyXSProcess.h  Particle.h  PhysicalConstants.h  ProductParticles.h  TNudyAlias.h  TNudyAliasCont.h  TNudyCapture.h  TNudyCore.h  TNudyDB.h  TNudyENDF.h  TNudyElastic.h  TNudyElement.h  TNudyElementRN.h  TNudyElementTable.h  TNudyEndfAng.h  TNudyEndfCont.h  TNudyEndfDoppler.h  TNudyEndfEnergy.h  TNudyEndfEnergyAng.h  TNudyEndfFile.h  TNudyEndfFissionYield.h  TNudyEndfINTG.h  TNudyEndfList.h  TNudyEndfMat.h  TNudyEndfNuPh.h  TNudyEndfPhAng.h  TNudyEndfPhEnergy.h  TNudyEndfPhProd.h  TNudyEndfPhYield.h  TNudyEndfRecoPoint.h  TNudyEndfRecord.h  TNudyEndfSec.h  TNudyEndfSigma.h  TNudyEndfTab1.h  TNudyEndfTab2.h  TNudyEndfTape.h  (+9 more)
Nudy/ntransport/: CMakeLists.txt  elastic.cpp  fission.cpp  inelastic.cpp  ncapture.cpp  nelastic.cpp  nfission.cpp  ninelastic.cpp  nthermal.cpp  thermal.cpp
Nudy/src/: Element.cc  Material.cc  NudyInterface.cxx  NudyXSProcess.cxx  TNudyAlias.cxx  TNudyAliasCont.cxx  TNudyCapture.cxx  TNudyCore.cxx  TNudyDB.cxx  TNudyENDF.cxx  TNudyElastic.cxx  TNudyElement.cxx  TNudyElementRN.cxx  TNudyElementTable.cxx  TNudyEndfAng.cxx  TNudyEndfCont.cxx  TNudyEndfDoppler.cxx  TNudyEndfEnergy.cxx  TNudyEndfEnergyAng.cxx  TNudyEndfFile.cxx  TNudyEndfFissionYield.cxx  TNudyEndfINTG.cxx  TNudyEndfList.cxx  TNudyEndfMat.cxx  TNudyEndfNuPh.cxx  TNudyEndfPhAng.cxx  TNudyEndfPhEnergy.cxx  TNudyEndfPhProd.cxx  TNudyEndfPhYield.cxx  TNudyEndfRecoPoint.cxx  TNudyEndfRecord.cxx  TNudyEndfSec.cxx  TNudyEndfSigma.cxx  TNudyEndfTab1.cxx  TNudyEndfTab2.cxx  TNudyEndfTape.cxx  TNudyEndfThermal.cxx  TNudyFission.cxx  TNudyInelastic.cxx  TNudyLibrary.cxx  (+5 more)
Nudy/tests/: CMakeLists.txt  doCompile
Nudy/tests/inc/: nelastic.h
Nudy/tests/src/: nelastic.cxx
VecMagFieldRoutine/: CMakeLists.txt  cms2015.txt
VecMagFieldRoutine/include/: #MagField.h#  ApproxEqual.h  CMSmagField.h  MagField.h  ScalarCMSmagField.h  TemplateCMSmagField.h
VecMagFieldRoutine/test/: BenchmarkTiming.cpp  BenchmarkTimingContinuous.cpp  BenchmarkTimingNew1.cpp  BenchmarkTimingNew2.cpp  BenchmarkTimingUnderWork.cpp  CheckVectorAgainstScalar.cpp  FloatDoubleDiff.cpp  MainMagFieldTest.cpp  TestGatherAlias.cpp  magfieldtest.cpp  smallTest.cpp
base/src/: Error.cxx
cmake/modules/: BuildZeroMQ.cmake  FindPythia8.cmake  FindROOT.cmake  Findcppzmq.cmake
examples/: CMakeLists.txt
examples/inc/: CMSApplication.h  CMSDetectorConstruction.h  LinkDef.h
examples/src/: CMSApplication.cxx  CMSDetectorConstruction.cxx  ExN03Application.cxx
examplesRP/: CMakeLists.txt
examplesRP/Geant4/SimplyCalo/: SimplyCalo.cc
examplesRP/Geant4/SimplyCalo/src/: DetectorConstruction.cc  EmAcceptance.cc  PhysicsList.cc  Run.cc  Run1.cc  RunAction.cc  RunAction1.cc  SteppingAction.cc  SteppingAction1.cc  SteppingVerbose.cc
examplesRP/GeantV/ClicRP/inc/: ClicApp.h  ClicAppData.h  ClicDetectorConstruction.h  ClicPrimaryGenerator.h  LinkDef.h
examplesRP/GeantV/ClicRP/src/: .CaloDetectorConstruction.cxx.swp  .geom.cxx.swp  ClicApp.cxx  ClicAppData.cxx  ClicDetectorConstruction.cxx  ClicPrimaryGenerator.cxx  geom.cxx
examplesRP/GeantV/TestFastSim/inc/: HistFS.h  LinkDef.h  StepMaxProcessFS.h  TestFSData.h  TestFastSim.h  UserDetectorConstructionFS.h  UserPhysicsListFS.h  UserPrimaryGeneratorFS.h
examplesRP/GeantV/TestFastSim/src/: HistFS.cxx  StepMaxProcessFS.cxx  TestFSData.cxx  TestFastSim.cxx  UserDetectorConstructionFS.cxx  UserPhysicsListFS.cxx  UserPrimaryGeneratorFS.cxx
examplesRP/GeantV/Tests/BremTestGV/: bremtestGV.cc
examplesRP/GeantV/Tests/BremTestGV/inc/: Hist.h
examplesRP/GeantV/Tests/ComptonTestGV/: comptontestGV.cc
examplesRP/GeantV/Tests/PhotoElectricTestGV/: photoelectrictestGV.cc
magneticfield/: CMakeLists.txt  TODO
magneticfield/inc/: AlignedBase.h  ConstBzFieldHelixStepper.h  ConstFieldHelixStepper.h  ConstVecFieldHelixStepper.h  ConstVectorFieldHelixStepper.h  FieldPropagatorFactory.h  FieldTrack.h  GUFieldPropagator.h  GUFieldPropagatorPool.h  GUFieldTrack.h  GUIntegrationDriver.h  GULineSection.h  GUTCashKarpRKF45.h  GUTCashKarpRKF45.h.old  GUVField.h  GUVMagneticField.h  GUVVecField.h  GUVVectorEquationOfMotion.h  GUVVectorField.h  GUVVectorHelicalStepper.h  GUVVectorIntegrationStepper.h  GUVVectorMagneticField.h  TVecUniMF.h  (+26 more)
magneticfield/test/: BenchmarkIntegrationDriver.cxx  CMakeLists.txt  ReproduceError.cxx  TestDriver2.cxx  TestVecCashKarpStepper.cxx  TestVecMagFieldEquation.cxx  testGUPropagateField.cxx  testIntegrationDriver.cxx  testIntegrationDriverCashKarp.cxx  testMagFieldEquation.cxx  testStepperFixed.cxx  testStepperFixedCashKarp.cxx  testTemplateMagFieldEquation.cxx  testTemplateStepperFixedCashKarp.cxx  testTemplateStepperFixedCashKarp2.cxx  testToyClass.cxx  testVectorIntegrationDriver.cxx  testVectorMagFieldEquation.cxx
realphysics/: CMakeLists.txt  realphysicsLinkDef.h
tabxsec/: CMakeLists.txt  tabxsec.cc
test-LHCb/: CMakeLists.txt
test-complex/: CMakeLists.txt  testcomplex.cc
test-small/: CMakeLists.txt  exampleN03.cc
testRP/: CMakeLists.txt
threejs/: Alice-1.json  Alice-3.json  ConverHexToInt.C  Default.htm  Defaultc.htm  Defaultg.htm  Defaultm.htm  PrepareExportJson-1.C  PrepareExportJson-old.C  PrepareExportJson.C  PrepareExport_save_json.C  RunExportJson.C  assembly1.C  geomtools.C  jsontools.C  make-sprites  menu.js  save-PrepareExportJson.C  savePrep.C  saveRun.C  scenes.html  scenes.js  test.html  test1.html  test2.html  tree.js  wrap.html
vecphys/: CMakeLists.txt  README
vecprot_v2/: CMSApp.cc  CMakeLists.txt  LHCbApp.cc  clicApp.mac  clicAppRP.cc  runApp.cc  runAppRP.cc  runAppTestEM3RP.cc  runCMS.C  runTestFastSim.cc  testFS_GV.mac
vecprot_v2_hpc/: CMakeLists.txt  README  build_geantV.sh  cmsappcommand.sh  eventFiles.txt  run_MPI_GV.sh  run_MPI_GV_gdb.sh  setup_lsf_cern.ch
vectphysproc/: CMakeLists.txt
xsec/: CMakeLists.txt  testserialReadCuda.cpp  testserialReadCuda.cu
(+239 files in other folders)
